// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transactions List > should render the \`TransactionsList\` component in "compact" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      ID
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9...056f82a46819da041d4ac0e04
    </a>
     
    <div
      class="dusk-copy-button"
    >
      <button
        aria-label="Copy Address"
        class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
        data-tooltip-id="main-tooltip"
        data-tooltip-text="Copy to clipboard"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
          />
        </svg>
        
         
        
      </button>
    </div>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      relative time
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Fee
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Status
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
    >
      success
    </span>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Type
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <div
      class="transaction-type"
    >
      <svg
        class="dusk-icon dusk-icon--size--large transaction-type__icon"
        data-tooltip-disabled="true"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="Public"
        data-tooltip-type="info"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
        />
      </svg>
      
       
      <span
        class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
      >
        transfer
      </span>
       
    </div>
    
  </dd>
</dl>
`;

exports[`Transactions List > should render the \`TransactionsList\` component in "full" mode 1`] = `
<dl
  class="detail-list"
>
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      ID
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <a
      class="dusk-anchor dusk-anchor--on-surface transaction-details__list-link"
      href="/some-base-path/transactions/transaction?id=4877687c2dbf154248d3ddee9ba0d81e3431f39056f82a46819da041d4ac0e04"
    >
      4877687c2dbf154248d3ddee9...056f82a46819da041d4ac0e04
    </a>
     
    <div
      class="dusk-copy-button"
    >
      <button
        aria-label="Copy Address"
        class="dusk-button dusk-button--type--button dusk-button--variant--secondary dusk-button--size--default dusk-icon-button dusk-copy-button"
        data-tooltip-id="main-tooltip"
        data-tooltip-text="Copy to clipboard"
        type="button"
      >
        <svg
          class="dusk-icon dusk-icon--size--default dusk-button__icon"
          role="graphics-symbol"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
          />
        </svg>
        
         
        
      </button>
    </div>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      relative time
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <time
      class="dusk-relative-time transaction-details__list-timestamp"
      datetime="2024-04-16T06:39:09.000Z"
      slot="definition"
    >
      last month
    </time>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Gas Price
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    1
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Gas Limit
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    500,000,000
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Fee
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    0.000290766
     DUSK
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Status
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <span
      class="dusk-badge dusk-badge--variant-success transaction-status explorer-badge"
    >
      success
    </span>
  </dd>
   
  <dt
    class="details-list__term details-list__term--table"
  >
    <div
      class="details-list__term-layout"
    >
       
      Type
    </div>
  </dt>
   
  <dd
    class="details-list__definition details-list__definition--table"
  >
    <div
      class="transaction-type"
    >
      <svg
        class="dusk-icon dusk-icon--size--large transaction-type__icon"
        data-tooltip-disabled="true"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="Public"
        data-tooltip-type="info"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 11C21 16.5 17.2 21.7 12 23C6.8 21.7 3 16.5 3 11V5L12 1L21 5V11M12 21C15.8 20 19 15.5 19 11.2V6.3L12 3.2L5 6.3V11.2C5 15.5 8.2 20 12 21M14.8 11H10.5V8.5C10.5 7.7 11.2 7.2 12 7.2S13.5 7.7 13.5 8.5V9H14.8V8.5C14.8 7.1 13.4 6 12 6S9.2 7.1 9.2 8.5V11C8.6 11 8 11.6 8 12.2V15.7C8 16.4 8.6 17 9.2 17H14.7C15.4 17 16 16.4 16 15.8V12.3C16 11.6 15.4 11 14.8 11Z"
        />
      </svg>
      
       
      <span
        class="dusk-badge dusk-badge--variant-neutral transaction-type__method-badge"
      >
        transfer
      </span>
       
    </div>
    
  </dd>
</dl>
`;
